--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,8 @@ h6 {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
+  z-index: 10;
+  position: relative;
 }
 
 .lang__current {
@@ -229,10 +231,11 @@ h6 {
   transition: opacity 0.3s, visibility 0.3s, height 0.5s, -webkit-transform 0.3s;
   transition: opacity 0.3s, visibility 0.3s, transform 0.3s, height 0.5s;
   transition: opacity 0.3s, visibility 0.3s, transform 0.3s, height 0.5s, -webkit-transform 0.3s;
-  margin-right: -4px;
-  margin-left: 4px;
   margin: -3px -4px 0 4px;
   height: 0;
+  background-color: rgba(255, 255, 255, 0.3);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 
 .lang-open .lang__list {
@@ -1082,6 +1085,15 @@ h6 {
 }
 
 @media (max-width: 47.99875em) {
+  .lang__current svg {
+    width: 0.9375rem;
+    height: 0.9375rem;
+  }
+
+  .lang__list {
+    margin: -3px -3px 0 3px;
+  }
+
   .footer__items {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
